# enote

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  run_all_tests  tauri.conf.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: Architecture-Overview.md  Getting-Started.md  WIKI_HOME.md
src/: main.rs
src/ai/: cloud_ai.rs  enhancer.rs  local_ai.rs  mod.rs
src/features/: collaboration.rs  linking.rs  mod.rs  note_manager.rs  search.rs
src/storage/: mod.rs
src/ui/: accessibility.rs  editor.rs  graph_view.rs  mod.rs  settings.rs  sidebar.rs  toolbar.rs
src/utils/: export.rs  file_utils.rs  markdown.rs  mod.rs
tests/: frontend_button_tests.rs  integration_tests.rs  performance_tests.rs  run_all_tests.rs
